--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   sign_in_button: ^3.2.0
   # Go Router is a Flutter plugin for routing in a Flutter app.
   go_router: ^14.2.0
+  # Google Generative AI is a Flutter plugin for using Google Generative AI in a Flutter app.
+  google_generative_ai: ^0.4.3
 
 
 #  # -----------------  GENERAL PACKAGES  -----------------
@@ -150,6 +152,7 @@ dependencies:
 #  firebase_remote_config: ^5.0.1
 
   intl: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
