audio transcription works absolutely great in iOS

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -37,6 +37,10 @@
         </array>
       </dict>
     </array>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>We need access to speech recognition to convert your voice to text.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need access to the microphone to record your speech.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
