--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
 #  # Url Launcher is a Flutter plugin for launching a URL in the mobile platform. Supports iOS and Android.
 #  url_launcher: ^6.3.0
 #  # Cached network image is a Flutter library to show images from the internet and keep them in the cache directory.
-#  cached_network_image: ^3.3.1
+  cached_network_image: ^3.3.1
 #  # Google Fonts is a Flutter plugin for using Google Fonts in a Flutter app.
 #  google_fonts: ^6.2.1
 #  # Flutter Email Validator is a Flutter plugin for validating email addresses in a Flutter app.
@@ -83,7 +83,7 @@ dependencies:
   # Flutter Speed Dial is a Flutter plugin for creating a speed dial menu widget in a Flutter app.
   flutter_speed_dial: ^7.0.0
 #  # Badges is a Flutter plugin for creating fancy animated badges in a Flutter app.
-#  badges: ^3.1.2
+  badges: ^3.1.2
 #  # Flutter Native Splash is a Flutter plugin for creating a splash screen in a Flutter app.
 #  flutter_native_splash: ^2.4.0
 #  # Another Flushbar is a Flutter plugin for creating custom snackbars in a Flutter app.
@@ -174,6 +174,7 @@ flutter:
   assets:
     - lib/assets/lottie_animations/
     - lib/assets/images/
+    - lib/assets/icons/
 
 
   # fonts:
