--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -160,6 +160,14 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   intl_utils: ^2.8.7
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/assets/app_icons/lupe1.png"
+  min_sdk_android: 23
+
 
 flutter:
 
