--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -158,6 +158,7 @@ dependencies:
   intl: any
   flutter_localized_locales: ^2.0.5
   expandable: ^5.0.1
+  google_mlkit_translation: ^0.11.0
 
 dev_dependencies:
   flutter_test:
