--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -159,6 +159,7 @@ dependencies:
   flutter_localized_locales: ^2.0.5
   expandable: ^5.0.1
   google_mlkit_translation: ^0.11.0
+  number_paginator: ^0.4.1
 
 dev_dependencies:
   flutter_test:
@@ -170,7 +171,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "lib/assets/app_icons/logo1.png"
+  image_path: "lib/assets/app_icons/logo2.png"
   min_sdk_android: 23
 
 
