--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -160,6 +160,7 @@ dependencies:
   expandable: ^5.0.1
   google_mlkit_translation: ^0.11.0
   number_paginator: ^0.4.1
+  flutter_google_places_sdk: ^0.3.9
 
 dev_dependencies:
   flutter_test:
