--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -172,7 +172,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "lib/assets/app_icons/logo2.png"
+  image_path: "lib/assets/app_icons/logo3.png"
   min_sdk_android: 23
 
 
@@ -190,6 +190,8 @@ flutter:
     - lib/assets/lottie_animations/
     - lib/assets/images/
     - lib/assets/icons/
+    - lib/assets/app_icons/
+    - lib/assets/app_logo/
 
 
   # fonts:
