--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,21 @@ dependencies:
   speech_to_text: ^6.6.0
   # Country Picker is a Flutter plugin for selecting countries in a Flutter app.
   country_picker: ^2.0.26
+  # Intl is a Flutter plugin for internationalization in a Flutter app.
+  intl: any
+  # Flutter Localized Locales is a Flutter plugin for using localized locales in a Flutter app.
+  flutter_localized_locales: ^2.0.5
+  # Expandable is a Flutter plugin for creating expandable widgets in a Flutter app.
+  expandable: ^5.0.1
+  # Google Mklit Translation is a Flutter plugin for translating text in a Flutter app.
+  google_mlkit_translation: ^0.11.0
+  # Number Paginator is a Flutter plugin for creating number paginators in a Flutter app.
+  number_paginator: ^0.4.1
+  # Google Places Autocomplete Text Field is a Flutter plugin for using Google Places Autocomplete in a Flutter app.
+  google_places_autocomplete_text_field: ^0.1.3
+  # Animated Do is a Flutter plugin for creating animations in a Flutter app.
+  animate_do: ^3.3.4
+
 
 
 #  # -----------------  GENERAL PACKAGES  -----------------
@@ -155,12 +170,6 @@ dependencies:
 #  # Firebase Remote Config is a Flutter plugin to use the Firebase Remote Config API and allow fetching remote configuration values from Firebase.
 #  firebase_remote_config: ^5.0.1
 
-  intl: any
-  flutter_localized_locales: ^2.0.5
-  expandable: ^5.0.1
-  google_mlkit_translation: ^0.11.0
-  number_paginator: ^0.4.1
-  google_places_autocomplete_text_field: ^0.1.3
 
 dev_dependencies:
   flutter_test:
