--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,6 +41,10 @@
     <string>We need access to speech recognition to convert your voice to text.</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>We need access to the microphone to record your speech.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to the camera to take allow you to take selfies for your profile and other functions.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to the photo library in order to allow to pick pictures from your phone.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
