--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   go_router: ^14.2.0
   # Google Generative AI is a Flutter plugin for using Google Generative AI in a Flutter app.
   google_generative_ai: ^0.4.3
+  # Firebase Vertex AI is a Flutter plugin for using Firebase Vertex AI in a Flutter app.
+  firebase_vertexai: ^0.2.2+2
   # Speech to Text is a Flutter plugin for converting speech to text in a Flutter app.
   speech_to_text: ^6.6.0
   # Country Picker is a Flutter plugin for selecting countries in a Flutter app.
@@ -164,6 +166,7 @@ dependencies:
   firebase_storage: ^12.0.1
   advanced_chips_input: ^0.1.5
   diacritic: ^0.1.5
+  firebase_app_check: ^0.3.0+3
 #  # Firebase Messaging is a Flutter plugin to use the Firebase Cloud Messaging (FCM) API and allow sending push notifications to Android and iOS users.
 #  firebase_messaging: ^15.0.1
 #  # Firebase In-App Messaging is a Flutter plugin to use the Firebase In-App Messaging API and allow sending in-app messages to Android and iOS users.
