--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   google_places_autocomplete_text_field: ^0.1.3
   # Animated Do is a Flutter plugin for creating animations in a Flutter app.
   animate_do: ^3.3.4
+  # Table Calendar is a Flutter plugin for creating table calendars in a Flutter app.
+  table_calendar: ^3.1.2
 
 
 
@@ -132,7 +134,7 @@ dependencies:
 #  # Font Awesome Icons is a Flutter plugin for using Font Awesome icons in a Flutter app. (Example of use: Icon(FontAwesomeIcons.addressBook))
 #  font_awesome_flutter: ^10.7.0
 #  # Icofont Icons is a Flutter plugin for using Icofont icons in a Flutter app. (Example of use: Icon(IcoFontIcons.addressBook))
-#  icofont_flutter: ^1.4.0
+  icofont_flutter: ^1.4.0
 
 #  # -----------------  MEDIA PACKAGES  -----------------
 #  # Video Player is a Flutter plugin for playing videos in a Flutter app.
@@ -167,6 +169,7 @@ dependencies:
   advanced_chips_input: ^0.1.5
   diacritic: ^0.1.5
   firebase_app_check: ^0.3.0+3
+  hugeicons: ^0.0.7
 #  # Firebase Messaging is a Flutter plugin to use the Firebase Cloud Messaging (FCM) API and allow sending push notifications to Android and iOS users.
 #  firebase_messaging: ^15.0.1
 #  # Firebase In-App Messaging is a Flutter plugin to use the Firebase In-App Messaging API and allow sending in-app messages to Android and iOS users.
